[gd_scene load_steps=8 format=3 uid="uid://dc41nrw1gs62s"]

[ext_resource type="Script" uid="uid://3vohfox2lu5q" path="res://Scripts/main.gd" id="1_bo1nx"]
[ext_resource type="PackedScene" uid="uid://dnbxtbysrvc18" path="res://Scenes/player.tscn" id="2_8gbba"]
[ext_resource type="PackedScene" uid="uid://b68ik874kckaa" path="res://Scenes/bamboo.tscn" id="2_21xkr"]
[ext_resource type="PackedScene" uid="uid://6rsid01iclmc" path="res://Scenes/pad.tscn" id="2_jjvhh"]
[ext_resource type="PackedScene" uid="uid://chq2wjivh6xgy" path="res://Scenes/cloud.tscn" id="2_kry3j"]
[ext_resource type="PackedScene" uid="uid://tkrntnp8bgfb" path="res://Scenes/hud.tscn" id="6_21xkr"]

[sub_resource type="Curve2D" id="Curve2D_21xkr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1213, 5, 0, 0, 0, 0, 1206, 645)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_bo1nx")
bamboo_scene = ExtResource("2_21xkr")
cloud_scene = ExtResource("2_kry3j")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -205.0
offset_right = 1157.0
offset_bottom = 739.0
color = Color(0.180392, 1, 1, 1)

[node name="BambooTimer" type="Timer" parent="."]
wait_time = 1.995

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 1.413

[node name="BambooTop" type="Marker2D" parent="."]
position = Vector2(461, 0)

[node name="BambooBottom" type="Marker2D" parent="."]
position = Vector2(460, 699)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(152, 339)

[node name="Player" parent="." instance=ExtResource("2_8gbba")]
position = Vector2(165, 347)
pad_scene = ExtResource("2_jjvhh")

[node name="CloudPath" type="Path2D" parent="."]
position = Vector2(-752, 8)
scale = Vector2(1, 1.10312)
curve = SubResource("Curve2D_21xkr")

[node name="CloudSpawnLocation" type="PathFollow2D" parent="CloudPath"]
position = Vector2(1213, 5)
rotation = 1.58173

[node name="HUD" parent="." instance=ExtResource("6_21xkr")]

[connection signal="timeout" from="BambooTimer" to="." method="_on_bamboo_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="CloudTimer" to="." method="_on_cloud_timer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
